# deepseek-v4-flash-sm120

./: .gitignore  DEEPSEEK-V4-FLASH.md  LICENSE  README.md  SM120_MQA_LOGITS_NOTES.md  STATUS.md  pyproject.toml  setup.py
bench/: gsm8k.py  niah.py  throughput.py
csrc/api/: api.cpp  sparse_decode.cpp  sparse_decode.h
csrc/common/: cutlass_shim.h  defines.h  params.h
csrc/sm120/decode/: sparse_decode.h  sparse_decode_instantiation.cu  sparse_decode_kernel.cuh
deepseek_v4_kernel/: __init__.py  _patch.py  ops.py  sitecustomize_hook.py
moe-configs/configs/triton_3_5_1/: E=256,N=512,device_name=NVIDIA_RTX_PRO_6000_Blackwell_Workstation_Edition,dtype=fp8_w8a8,block_shape=[128, 128].json
moe-configs/patch/: common_utils.py  tuning_fused_moe_triton.py
scripts/: build_in_sglang_docker.sh  launch_dsv4_flash_sm120.sh  launch_dsv4_flash_sm120_tp4.sh  sglang_entrypoint.py
tests/: reference.py  test_sparse_decode.py
w8a8-configs/: N=1024,K=4096,device_name=NVIDIA_RTX_PRO_6000_Blackwell_Workstation_Edition,dtype=fp8_w8a8,block_shape=[128, 128].json  N=1536,K=4096,device_name=NVIDIA_RTX_PRO_6000_Blackwell_Workstation_Edition,dtype=fp8_w8a8,block_shape=[128, 128].json  N=4096,K=2048,device_name=NVIDIA_RTX_PRO_6000_Blackwell_Workstation_Edition,dtype=fp8_w8a8,block_shape=[128, 128].json  N=4096,K=512,device_name=NVIDIA_RTX_PRO_6000_Blackwell_Workstation_Edition,dtype=fp8_w8a8,block_shape=[128, 128].json  N=8192,K=1024,device_name=NVIDIA_RTX_PRO_6000_Blackwell_Workstation_Edition,dtype=fp8_w8a8,block_shape=[128, 128].json
