[build-system]
requires = ["setuptools>=64", "wheel", "torch>=2.5"]
build-backend = "setuptools.build_meta"

[project]
name = "deepseek_v4_kernel"
version = "0.1.0"
description = "SM_120 (Blackwell workstation) sparse decode kernels for DeepSeek-V4-Flash"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = ["torch>=2.5"]

[tool.setuptools]
include-package-data = true
